--- a/package.json
+++ b/package.json
@@ -9,9 +9,29 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.3",
+    "@heroicons/react": "v1",
+    "@reduxjs/toolkit": "^1.8.6",
+    "@tailwindcss/forms": "^0.5.3",
+    "add": "^2.0.6",
+    "autoprefixer": "^10.4.12",
+    "axios": "^1.1.2",
+    "d": "^1.0.1",
+    "fs": "^0.0.1-security",
     "next": "12.3.1",
+    "next-redux-wrapper": "^8.0.0",
+    "nookies": "^2.5.2",
+    "postcss": "^8.4.17",
+    "prettier": "^2.7.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.37.0",
+    "react-redux": "^8.0.4",
+    "react-router-dom": "^6.4.2",
+    "react-scripts": "^5.0.1",
+    "sass": "^1.55.0",
+    "tailwindcss": "^3.1.8",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@types/node": "18.8.3",
