--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.1.2",
     "d": "^1.0.1",
     "fs": "^0.0.1-security",
+    "moment": "^2.29.4",
     "next": "12.3.1",
     "next-redux-wrapper": "^8.0.0",
     "nookies": "^2.5.2",
@@ -26,6 +27,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.37.0",
+    "react-moment": "^1.1.2",
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.2",
     "react-scripts": "^5.0.1",
